# rebloom

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md
backend/: .importlinter  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_baseline.py  0002_users_consents_users_and_consents.py  0003_listings_photos_likes_listings_photos_likes.py  0004_cities_cities.py  0005_deals_escrow_deals_payments_payouts_ledger.py  0006_audit_log_audit_log.py  0007_reviews_reviews.py  0008_user_totp_user_totp_secret.py  0009_messages_deal_chat_messages.py  0010_dsr_user_dsr_deletion_deleted_status.py  0011_photo_phash_photo_phash.py  0012_notifications_notifications_outbox.py  0013_listing_messages_listing_messages.py  0014_user_reports_user_reports.py  0015_notif_settings_user_notif_settings.py  0016_support_tickets_support_tickets.py  0017_fraud_fraud_signals_risk_score.py  0018_pickup_address_deal_pickup_address_enc.py  0019_oauth_identities.py  0020_no_escrow_deal_status.py  0021_totp_secret_widen_totp_secret.py  0022_listing_metro_flowers.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  admin.py  analytics_middleware.py  auth.py  chat.py  cities.py  consent.py  deals.py  deps.py  envelope.py  feed.py  geo.py  health.py  listing_chat.py  listings.py  me.py  notifications.py  reports.py  reviews.py  support.py  ws.py
backend/app/bot/: __init__.py
backend/app/core/: __init__.py  errors.py  result.py
backend/app/infrastructure/: __init__.py  analytics.py  crypto.py  images.py  logging.py  moderation.py  notifications.py  object_storage.py  ratelimit.py  realtime.py  redis.py  sms.py  yookassa.py
backend/app/workers/: __init__.py  fraud.py  notifications.py  reservations.py  retention.py  scheduler.py
backend/config/moderation/: lexicon.json
backend/scripts/: backfill_demo_metro.py  seed_demo.py  seed_reviews.py
backend/tests/: conftest.py
backend/tests/contract/: test_admin_2fa.py  test_admin_finance.py  test_admin_fraud.py  test_admin_moderation.py  test_admin_overview.py  test_admin_users.py  test_auth_endpoints.py  test_chat.py  (+18 more)
(+407 files in other folders)
